# frand-home

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
actix/src/: config.rs  main.rs  session.rs
actix/src/authorize/: oauth.rs  user.rs
actix/src/route/: index.rs  login.rs  res.rs  ws.rs
actix/src/server/: handle_client_message.rs  handle_server_message.rs  mod.rs  server.rs
actix/src/youtube/: playlist.rs  playlist_items.rs
base/: Cargo.toml
base/src/: lib.rs  node.rs  option.rs  vec.rs
base/src/state/: mod.rs  state.rs  state_message.rs  state_property.rs
common/: Cargo.toml
common/src/state/: app_state.rs  mod.rs  request_state.rs  socket_state.rs  user_state.rs
config_sample/: Config.toml  log4rs.yml
image/: .dockerignore  Cargo.toml  Dockerfile  Trunk.toml
image/source/app/: Cargo.toml
image/source/app/music/: Cargo.toml
image/source/app/music/src/: lib.rs
image/source/app/music/src/backend/: component.rs  config.rs  database.rs  mod.rs
image/source/app/music/src/backend/database/: database.rs  mod.rs  music.rs
image/source/app/music/src/backend/youtube/: mod.rs  playlist.rs  playlist_items.rs
image/source/app/music/src/state/client/: client_state.rs  lyrics.rs  lyrics_state.rs  mod.rs  music_client.rs  musiclist.rs  musiclist_state.rs  playlist_state.rs  youtube_player.rs  youtube_player_state.rs
image/source/app/music/src/state/server/: mod.rs  music_server.rs  playlist.rs  playlist_state.rs  server_state.rs
image/source/app/music/src/view/: lyrics.rs  mod.rs  music_queue.rs  musiclist.rs  playlist.rs  server_player.rs  youtube_player.rs
image/source/app/src/: lib.rs
image/source/app/src/backend/: component.rs  config.rs  mod.rs
image/source/app/src/state/: app.rs  mod.rs  socket_state.rs
image/source/app/src/state/client/: client.rs  client_state.rs  mod.rs  task_bar.rs  user.rs  user_state.rs
image/source/app/src/state/server/: server.rs  server_state.rs
image/source/app/src/view/: mod.rs  task_bar.rs
image/source/state/: Cargo.toml
image/source/state/macro/src/: property_state.rs  property_state_root.rs
image/source/state/src/: lib.rs  node.rs  vec.rs
image/source/state/src/state/: mod.rs  state.rs  state_component.rs  state_message.rs  state_property.rs
macro/: Cargo.toml
macro/src/: json_convert.rs  lib.rs  property_state.rs  property_state_root.rs
sample/: .env  Dockerfile  docker-compose.yml
sample/config/: AppConfig.toml  Config.toml  log4rs.yml
sample/res/: style.css
source/: .dockerignore  Cargo.toml  Dockerfile
source/actix/: Cargo.toml
source/actix/src/: config.rs  main.rs
source/actix/src/authorize/: user.rs
source/actix/src/mysql/: mod.rs  mysql.rs
source/actix/src/route/: mod.rs  ws.rs
source/actix/src/server/: handle_client_message.rs  handle_message.rs  handle_server_message.rs  mod.rs  server.rs
source/actix/src/youtube/: playlist.rs  playlist_items.rs
source/yew/: Cargo.toml  Trunk.toml
source/yew/src/app/: app.rs  mod.rs
source/yew/src/view/: task_bar.rs  view.rs
source/yew/src/view/music/: playlist.rs  youtube_player.rs
yew/: Cargo.toml  Trunk.toml
yew/src/: main.rs
yew/src/app/: app.rs  (+2 more)
(+80 files in other folders)
