[package]
name = "frand-home-actix"

[package.version]
workspace = true
[package.authors]
workspace = true
[package.edition]
workspace = true

[dependencies]
frand-home-common = { path = "../common" }
actix = "0.13.0"
actix-http = "3.6.0"
actix-web = { version = "4", features = ["rustls-0_22"] }
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-proxy = "0.2.0"
actix-files = "0.6.5"
actix-ws = "0.3.0"
tokio = { version = "1.24.2", features = ["rt", "time", "macros"] }
futures-util = "0.3.30"
lazy_static = "1.4.0"
toml = "0.8.12"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
rustls = "0.22"
rustls-pemfile = "2"
anyhow = "1.0"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
awc = "3.4.0"
hex = "0.4.3"
log = "0.4.17"
log4rs = { version = "1.3.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
mysql = "25"
dotenv = "0.15.0"