[package]
name = "frand-home-yew"

[package.version]
workspace = true
[package.authors]
workspace = true
[package.edition]
workspace = true

[dependencies]
frand-home-common = { path = "../common" }
yew = { version = "0.21", features = ["csr"] }
yew-websocket = "1"
serde = "1"
serde_json = "1"
anyhow = "1.0"
log = "0.4.6"
wasm-logger = "0.2.0"
gloo-dialogs = "0.2.0"