[package]
name = "frand-home-app"

[package.version]
workspace = true
[package.authors]
workspace = true
[package.edition]
workspace = true

[dependencies]
frand-home-node = { path = "../node" }
frand-home-music = { path = "music" }
serde = "1"
serde_json = "1.0.91"
yew = "0.21"
bytestring = "1.3.1"
log = "0.4.6"
anyhow = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.24.2", features = ["rt", "time", "macros"] }
uuid = { version = "1.8.0", features = ["v4"] }
awc = { version = "3.4.0" }
toml = "0.8.12"
dotenv = "0.15.0"